To get input from user and perform search based on criteria